# risk-tool

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  app.py  crud.py  main.py  models.py  pyproject.toml  schemas.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 17bf65762987_initial_migration.py  3920e8618c28_initial_migration.py  86555293a85f_initial_migration.py  a48301ace15d_initial_migration.py  bc075d64e7f6_initial_migration.py  c779c33f734e_initial_migration.py  e442313e731f_initial_migration.py  ed7496f31743_initial_migration.py  fe1b5a684e14_initial_migration.py
backend/ram/: crud.py  database.py  enums.py  models.py  schemas.py
frontend/: Dockerfile  api.ts  next.config.js  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/components/: RiskInputView.tsx
frontend/src/: app.css  global.d.ts
frontend/src/lib/components/: Footer.svelte  Header.svelte  RiskDossierHeader.svelte  RiskDossierOverview.svelte  Sidebar.svelte  StartNew.svelte  Text.svelte  app-sidebar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/demo-page/: +page.server.ts  +page.svelte  columns.ts  data-table.svelte
frontend/src/routes/risk-dossiers/: +page.svelte
frontend/src/routes/riskviewer/: +page.svelte  columns.ts
frontend/src/routes/search/: +page.svelte
frontend_old/: package.json
frontend_old/components/: MetadataForm.tsx  SharedComponents.tsx
(+15 files in other folders)
